--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --port 5000",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "start": "node index.js"
   },
   "dependencies": {
     "github-markdown-css": "^2.6.0",
     "highlight.js": "^9.10.0",
+    "koa": "^2.2.0",
+    "koa-router": "^7.1.1",
+    "koa-static": "^3.0.0",
     "lodash": "^4.17.4",
     "markdown-it": "^8.3.1",
     "vue": "^2.2.1"
