--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "koa-static": "^3.0.0",
     "lodash": "^4.17.4",
     "markdown-it": "^8.3.1",
-    "vue": "^2.2.1"
+    "vue": "^2.2.1",
+    "vue-resource": "^1.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
