--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --port 5000",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "start": "node index.js"
+    "start": "cross-env NODE_ENV=development node index.js"
   },
   "dependencies": {
     "github-markdown-css": "^2.6.0",
     "highlight.js": "^9.10.0",
     "koa": "^2.2.0",
+    "koa-convert": "^1.2.0",
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
     "lodash": "^4.17.4",
@@ -27,6 +28,7 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "koa-webpack-dev-middleware": "^1.4.5",
     "style-loader": "^0.16.1",
     "vue-loader": "^11.1.4",
     "vue-template-compiler": "^2.2.1",
