--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "impressbook",
+  "name": "@xunlei/impressbook",
   "description": "使用 Impress Book 来惊艳你的听众",
   "version": "1.0.0",
   "author": "binbin",
