--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa-static": "^3.0.0",
     "lodash": "^4.17.4",
     "markdown-it": "^8.3.1",
+    "opn": "^5.0.0",
     "vue": "^2.2.1",
     "vue-resource": "^1.3.1"
   },
